hello-service-kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
  namespace: hello-spring-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
      - name: spring-boot
        image: image-registry.openshift-image-registry.svc:5000/hello-spring-dev/hello-service-dev:dev-2024-01-29-21-33-56
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9779
          name: prometheus
        - containerPort: 8778
          name: jolokia
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: http
          initialDelaySeconds: 180
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
