hello-service-kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    provider: jkube
  name: hello-service
  namespace: teste
  resourceVersion: "5393261"
  uid: 6389f7d4-c074-479b-9789-5021da905318
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-service
    group: com.redhat.sample
    provider: jkube
  sessionAffinity: None
  type: ClusterIP
