hello-service-kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    provider: jkube
  name: hello-service
  namespace: hello-spring-prod
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-service
    weight: 100
  wildcardPolicy: None
